refactor: alterando dao para jpa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+##H2
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/ecommerceT1B5;AUTO_SERVER=TRUE
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
